<resources>
    <string name="app_name">Trip Planner</string>

    <string name="settings">Settings</string>
    <string name="people">People</string>
    <string name="trips">Trips</string>

    <string name="placeholderTrip">Ski Trip</string>
    <string name="placeholderTripDates">21 Feb - 2 Mar</string>
    <string name="placeholderPersonName">Conor</string>

    <string name="content_description_media">Trip image</string>
    <string name="name">Name</string>
    <string name="number">Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="name_placeholder">Name Placeholder</string>
    <string name="default_string">default</string>
    <string name="split_costs_button">Split costs</string>
    <string name="add_receipt_button">Add receipt</string>
    <string name="preferences">Preferences</string>
    <string name="new_receipt">New Receipt</string>
    <string name="cost">Cost</string>
    <string name="add_person">Add Person</string>
    <string name="submit_changes_button">Submit Changes Button</string>
    <string name="topappbar">topAppBar</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="edit_person">Edit Person</string>
    <string name="new_trip">New Trip</string>
    <string name="date">Date</string>
    <string name="add_receipt">Add Receipt</string>
    <string name="edit_receipt">Edit Receipt</string>
    <string name="edit_trip">Edit Trip</string>
</resources>
