<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_karrow_left"
            app:title="@string/new_receipt" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/receipt_photo"
        android:layout_width="0dp"
        android:layout_height="194dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/content_description_media"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/nameTextInput"
        app:layout_constraintStart_toStartOf="@+id/nameTextInput"
        app:layout_constraintTop_toBottomOf="@+id/nameTextInput"
        app:srcCompat="@drawable/imagedefault" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/costTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receipt_photo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/costEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/addPersonEditText"
        app:layout_constraintStart_toStartOf="@+id/addPersonEditText"
        app:layout_constraintTop_toBottomOf="@+id/addPersonEditText">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholderPersonName"
            android:textStyle="bold" />

    </com.google.android.material.chip.ChipGroup>

    <EditText
        android:id="@+id/addPersonEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Add Person"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/costTextInput"
        app:layout_constraintStart_toStartOf="@+id/costTextInput"
        app:layout_constraintTop_toBottomOf="@+id/costTextInput" />

</androidx.constraintlayout.widget.ConstraintLayout>